src/objects/Process_Videos__c.object
<CustomObject>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessVideoHeader__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ProcessVideoHeader</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProcessVideoImage__c</fullName>
        <label>ProcessVideoImage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProcessVideoURL__c</fullName>
        <label>ProcessVideoURL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Process Video</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>PID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Process_Videos</fullName>
        <columns>NAME</columns>
        <columns>ProcessVideoHeader__c</columns>
        <columns>ProcessVideoURL__c</columns>
        <columns>IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Process Videos</label>
    </listViews>
</CustomObject>